--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,20 @@ This NEWS file summarises the main changes.
 
         *********************************************
         **                                         **
+        **   CHANGES IN DATA.TABLE VERSION 1.6.6   **
+        **                                         **
+        *********************************************
+
+BUG FIXES
+
+    o   Tests using .Call("Rf_setAttrib",...) passed CRAN acceptance
+        checks but failed on many (but not all) platforms. Fixed.
+        Thanks (and apologies) to Prof Brian Ripley for investigating
+        the issue.
+
+
+        *********************************************
+        **                                         **
         **   CHANGES IN DATA.TABLE VERSION 1.6.5   **
         **                                         **
         *********************************************
