--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,42 @@ The ChangeLog for data.table is the SVN commit log itself :
 
 This NEWS file summarises the main changes.
 
+        *********************************************
+        **                                         **
+        **   CHANGES IN DATA.TABLE VERSION 1.7.2   **
+        **                                         **
+        *********************************************
+
+NEW FEATURES
+
+    o   unique and duplicated methods now work on unkeyed tables (comparing
+        all columns in that case) and both now respect machine tolerance for
+        double precision columns, implementing FR#1626 and fixing bug #1632.
+        Their help page has been updated accordingly with detailed examples.
+        Thanks to questions by Iterator and comments by Allan Engelhardt on
+        Stack Overflow.
+        
+    o   A new method as.data.table.list has been added, since passing a (pure)
+        list to data.table() now creates a single list column.
+    
+
+BUG FIXES
+
+    o   Assigning to a column variable using <- or = in j now
+        works (creating a local copy within j), rather than
+        persisting from group to group and sometimes causing a crash.
+        Non column variables still persist from group to group; e.g.,
+        a group counter. This fixes the remainder of #1624 thanks to
+        Steve Lianoglou for reporting.
+        
+    o   A crash bug is fixed when j returns a (strictly) NULL column next
+        to a non-empty column, #1633. This case was anticipated and coded
+        for but an errant LENGTH() should have been length(). Thanks
+        to Dennis Murphy for reporting.
+        
+    o   The first column of data.table() can now be a list column, fixing
+        #1640. Thanks to Stavros Macrakis for reporting.
+
 
         *********************************************
         **                                         **
@@ -17,7 +53,7 @@ BUG FIXES
         the intention to allow assignment to .SD. Take a 'copy(.SD)'
         first if needed. Now documented in ?data.table and new FAQ 4.5
         including example. Thanks to Steve Lianoglou for reporting.
-        
+
     o   := now works with a logical i subset; e.g.,
             DT[x==1,y:=x]
         Thanks to Muhammad Waliji for reporting.
@@ -26,7 +62,8 @@ USER VISIBLE CHANGES
 
     o   Error message "column <name> of i is not internally type integer"
         is now more helpful adding "i doesn't need to be keyed, just
-        convert the (likely) character column to factor".
+        convert the (likely) character column to factor". Thanks to
+        Christoph_J for his SO question.
 
 
         *********************************************
