--- a/inst/doc/datatable-faq.Rnw
+++ b/inst/doc/datatable-faq.Rnw
@@ -14,10 +14,9 @@
 
 <<echo=FALSE,results=hide>>=
 if (!exists("data.table",.GlobalEnv)) library(data.table)  # see Intro.Rnw for comments on these two lines
-rm(list=as.character(tables()$NAME))
+rm(list=as.character(tables()$NAME),envir=.GlobalEnv)
 options(width=70)  # so lines wrap round
 @
-
 
 \begin{document}
 \title{FAQs about the \pkg{data.table} package in \proglang{R}}
@@ -373,13 +372,11 @@ So that compound syntax can work; e.g., \code{DT[i,done:=TRUE][,sum(done)]}. The
 \end{itemize}
 
 \subsection{I've noticed that \code{base::cbind.data.frame} (and \code{base::rbind.data.frame}) appear to be changed by \code{data.table}. How is this possible? Why?}
-It is a temporary, last resort solution until we discover a better way to solve the problems listed below. These are extraordinary circumstances: \code{data.table} inherits from \code{data.frame}, \emph{and}, \code{base::cbind} and \code{base::rbind} (uniquely) do their own S3 dispatch internally as documented by \code{?cbind}. The change is adding one line to the start of each function directly in base; e.g.,
+It is a temporary, last resort solution until we discover a better way to solve the problems listed below. Essentially, the issue is that \code{data.table} inherits from \code{data.frame}, \emph{and}, \code{base::cbind} and \code{base::rbind} (uniquely) do their own S3 dispatch internally as documented by \code{?cbind}. The change is adding one line to the start of each function directly in base; e.g.,
 <<>>=
 base::cbind.data.frame
 @
-That modification is achieved by calling \code{assignInNamespace} from \code{.onAttach}. It is done dynamically; i.e., the base definition of \code{cbind.data.frame} is fetched, one line added to the beginning and then assigned back to base. This solution is intended to be robust to different definitions of \code{base::cbind.data.frame} in different versions of \proglang{R}, including unknown future changes. Again, it is a last resort until a better solution is known or made available.
-
-The competing requirements are :
+That modification is made dynamically; i.e., the base definition of \code{cbind.data.frame} is fetched, one line added to the beginning and then assigned back to base. This solution is intended to be robust to different definitions of \code{base::cbind.data.frame} in different versions of \proglang{R}, including unknown future changes. Again, it is a last resort until a better solution is known or made available. The competing requirements are :
 \begin{itemize}
 \item \code{cbind(DT,DF)} needs to work. Defining \code{cbind.data.table} doesn't work because \code{base::cbind} does its own S3 dispatch and requires that the \emph{first} \code{cbind} method for each object it is passed is \emph{identical}. This is not true in \code{cbind(DT,DF)} because the first method for \code{DT} is \code{cbind.data.table} but the first method for \code{DF} is \code{cbind.data.frame}. \code{base::cbind} then falls through to its internal \code{bind} code which appears to treat \code{DT} as a regular list and returns very odd looking and unusable \code{matrix} output. See FAQ \ref{faq:cbinderror}. We cannot just advise users not to call \code{cbind(DT,DF)} because packages such as ggplot2 make such a call (test 168.5).
 \item This naturally leads to trying to mask \code{cbind.data.frame} instead. Since a \code{data.table} is a \code{data.frame}, \code{cbind} would find the same method for both \code{DT} and \code{DF}. However, this doesn't work either because \code{base::cbind} appears to find methods in \code{base} first; i.e., \code{base::cbind.data.frame} isn't maskable. This is reproducible as follows :
@@ -388,6 +385,9 @@ The competing requirements are :
 foo = data.frame(a=1:3)
 cbind.data.frame = function(...)cat("Not printed\n")
 cbind(foo)
+@
+<<echo=FALSE>>=
+rm("cbind.data.frame")
 @
 \begin{itemize}
 \item Finally, we tried masking \code{cbind} itself (v1.6.5 and v1.6.6). This allowed \code{cbind(DT,DF)} to work, but introduced compatibility issues with package IRanges, since IRanges also masks \code{cbind}. It worked if IRanges was lower on the search() path than \code{data.table}, but if IRanges was higher then \code{data.table}'s \code{cbind} would never be called and the strange looking matrix output occurs again (FAQ \ref{faq:cbinderror}).
