--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,59 @@ This NEWS file summarises the main changes.
 
         *********************************************
         **                                         **
+        **   CHANGES IN DATA.TABLE VERSION 1.7.5   **
+        **                                         **
+        *********************************************
+
+BUG FIXES
+
+   o    merge()-ing a data.table where its key is not the first
+        few columns in order now works correctly and without
+        warning, fixing #1645. Thanks to Timothee Carayol for
+        reporting.
+
+   o    Mixing nomatch=0 and mult="last" (or "first") now works,
+        #1661. Thanks to Johann Hibschman for reporting.
+
+   o    Join Inherited Scope now respects nomatch=0, #1663. Thanks
+        to Johann Hibschman for reporting.
+
+   o    by= could generate a keyed result table with invalid key;
+        e.g., when by= expressions return NA, #1631. Thanks to
+        Muhammad Waliji for reporting.
+        
+   o    Adding a column to a data.table loaded from disk resulted
+        in an error that truelength(DT)<length(DT).
+        
+   o    CJ() bogus values and logical error fixed, #1689. Thanks to
+        Damian Betebenner and Chris Neff for reporting.
+        
+   o    j=list(.SD,newcol=...) now gives friendly error suggesting cbind
+        or merge afterwards until := by group is implemented, rather than
+        treating .SD as a list column, #1647. Thanks to a question by
+        Christoph_J on Stack Overflow.
+        
+
+USER VISIBLE CHANGES
+
+   o    rbind now cross-refs colnames as data.frame does, rather 
+        than always binding by column order, FR#1634. A warning is
+        produced when the colnames are not in a consistent order.
+        Thanks to Damian Betebenner for highlighting. rbind an
+        unnamed list to bind columns by position.
+        
+   o    The 'bysameorder' argument has been removed, as intended and
+        warned in ?data.table.
+        
+   o    New option datatable.allocwarn. See ?truelength.
+        
+NOTES
+
+   o    There are now 472 raw tests, plus S4 tests.
+
+
+        *********************************************
+        **                                         **
         **   CHANGES IN DATA.TABLE VERSION 1.7.4   **
         **                                         **
         *********************************************
@@ -15,8 +68,8 @@ BUG FIXES
    o    v1.7.3 failed CRAN checks (and could crash) in R pre-2.14.0.
         Over-allocation in v1.7.3 uses truelength which is initialized
         to 0 by R 2.14.0, but not initialized pre-2.14.0. This was
-        known and coded for but only tested in 2.14.0 before release
-        to CRAN.
+        known and coded for but only tested in 2.14.0 before previous
+        release to CRAN.
 
 NOTES
 
