--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,31 @@ This NEWS file summarises the main changes.
 
         *********************************************
         **                                         **
+        **   CHANGES IN DATA.TABLE VERSION 1.7.6   **
+        **                                         **
+        *********************************************
+
+NEW FEATURES
+
+   o    An empty list column can now be added with :=, and
+        data.table() accepts empty list().
+            DT[,newcol:=list()]
+            data.table(a=1:3,b=list())
+        Empty list columns contain NULL for all rows.
+        
+BUG FIXES
+
+   o    Adding a column to a data.table loaded from disk could
+        result in a memory corruption in R <= 2.13.2, revealed
+        and thanks to CRAN checks on windows old-rel.
+        
+   o    Adding a factor column with a RHS to be recycled no longer
+        loses its factor attribute, #1691. Thanks to Damian
+        Betebenner for reporting.
+
+
+        *********************************************
+        **                                         **
         **   CHANGES IN DATA.TABLE VERSION 1.7.5   **
         **                                         **
         *********************************************
@@ -101,7 +126,8 @@ NEW FEATURES
             alloc.col(DT,10000)  # reserve 10,000 column slots
         
     o   New function truelength() returns the number of column pointer
-        slots allocated, always >= length().
+        slots allocated, always >= length() other than just after a table
+        has been loaded from disk.
         
     o   New option 'datatable.nomatch' allows the default for nomatch
         to be changed from NA to 0, as wished for by Branson Owen.
