--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,51 @@ The ChangeLog for data.table is the SVN commit log itself :
 
 This NEWS file summarises the main changes.
 
+        **********************************************
+        **                                          **
+        **   CHANGES IN DATA.TABLE VERSION 1.7.10   **
+        **                                          **
+        **********************************************
+        
+NEW FEATURES
+
+    o   New function setcolorder() reorders the columns by name
+        or by number, by reference with no copy. This is (almost)
+        infinitely faster than DT[,neworder,with=FALSE].
+        
+    o   The prefix i. can now be used in j to refer to join inherited
+        columns of i that are otherwise masked by columns in x with
+        the same name.
+        
+        
+BUG FIXES
+
+    o   tracemem() in example(setkey) was causing CRAN check errors
+        on machines where R is compiled without memory profiling available,
+        for efficiency. Notably, R for Windows, Ubuntu and Mac have memory
+        profiling enabled which may slow down R on those architectures even
+        when memory profiling is not being requested by the user. The call to
+        tracemem() is now wrapped with try().
+        
+    o   merge of unkeyed tables now works correctly after breaking in 1.7.8 and
+        1.7.9. Thanks to Eric and DM for reporting. Tests added.
+        
+    o   nomatch=0 was ignored for the first group when j used join inherited
+        scope. Fixed and tests added.
+        
+    
+USER-VISIBLE CHANGES
+
+    o   Updating an existing column using := after a key<- now works without warning
+        or error. This can be useful in interactive use when you forget to use setkey()
+        but don't mind about the inefficiency of key<-. Thanks to Chris Neff for
+        providing a convincing use case. Adding a new column uing := after key<-
+        issues a warning, shallow copies and proceeds, as before.
+    
+    O   The 'datatable.pre.suffixes' option has been removed. It was available to
+        obtain deprecated merge() suffixes pre v1.5.4.
+
+
         *********************************************
         **                                         **
         **   CHANGES IN DATA.TABLE VERSION 1.7.9   **
